--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -123,6 +123,10 @@ $menu-label-color: $white-ter
   margin: 0 1.5em 0 0;
 
 
+.HeaderSlider .gatsby-image-wrapper
+  height: 33%;
+
+
 @import "~bulma"
 
 
